<resources>
    <string name="app_name">SpaceXFan</string>
    <string name="title_rockets">Rockets</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_upcoming_launches">Upcoming Launches</string>
    <string name="rocket_name_title">Name</string>
    <string name="rocket_type_title">Type</string>
    <string name="rocket_country_title">Country</string>
    <string name="rocket_company_title">Company</string>
    <string name="rocket_wikipedia_title">Wikipedia</string>
    <string name="rocket_first_flight_title">First Flight</string>
    <string name="rocket_height_title">Height</string>
    <string name="rocket_diameter_title">Diameter</string>
    <string name="rocket_mass_title">Mass</string>
    <string name="rocket_description_title">Description</string>
    <string name="feet">feet</string>
    <string name="kg">kg</string>
    <string name="formatted_value_text">%s %s</string>
    <string name="launch_name_title">Name</string>
    <string name="launch_date_title">Date</string>
    <string name="launch_flight_number_title">Flight Number</string>
    <string name="launch_detail_page_title">Launch Details</string>
    <string name="rocket_detail_page_title">Rocket Details</string>
    <string name="application_permission_permission_needed">Permission is required!</string>
    <string name="application_permission_redirect_for_permission">You will direct to settings for permission.</string>
    <string name="application_permission_allow">Allow</string>
    <string name="application_permission_cancel">Cancel</string>
    <string name="permission_granted">Permission is granted</string>
    <string name="login_title">Login</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="favourites_empty_message">You do not have a favorite rocket.</string>
</resources>