<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_rockets">

    <fragment
        android:id="@+id/navigation_rockets"
        android:name="com.kadirbulut.spacexfan.ui.rockets.RocketsFragment"
        android:label="@string/title_rockets"
        tools:layout="@layout/fragment_rockets" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.kadirbulut.spacexfan.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_upcoming_launches"
        android:name="com.kadirbulut.spacexfan.ui.upcominglaunches.UpcomingLaunchesFragment"
        android:label="@string/title_upcoming_launches"
        tools:layout="@layout/fragment_upcoming_launches" />
</navigation>